--- a/A08/README.adoc
+++ b/A08/README.adoc
@@ -81,66 +81,65 @@ Include your output in the README.adoc
 
  ====================OUTPUT============================================
 
-The initial top of the heap is 0x7f70b3cd4000.
-Total blocks: 149, Free: 91, Used: 58
-Internal unused: total: 26932 average: 1135.0 smallest: 8 largest: 3467
-External unused: total: 103324 average: 1781.0 smallest: 6 largest: 3962
+The initial top of the heap is 0x7f3b19a4c000.
+Total blocks: 161, Free: 103, Used: 58
+Internal unused: total: 205614 average: 3545.0 smallest: 929 largest: 3999
+External unused: total: 144345 average: 1401.0 smallest: 10 largest: 3984
 0
-The current top of the heap is 0x7f70b3d2a527.
+The current top of the heap is 0x7f3b19aa2527.
 Increased by 345 (0x159) Kbyte
-Total blocks: 155, Free: 101, Used: 54
-Internal unused: total: 36924 average: 1338.0 smallest: 8 largest: 3891
-External unused: total: 135148 average: 2502.0 smallest: 6 largest: 3970
+Total blocks: 167, Free: 113, Used: 54
+Internal unused: total: 196378 average: 3636.0 smallest: 1493 largest: 3999
+External unused: total: 177549 average: 1571.0 smallest: 10 largest: 3984
 1
-The current top of the heap is 0x7f70b3d30327.
+The current top of the heap is 0x7f3b19aa8327.
 Increased by 368 (0x170) Kbyte
-Total blocks: 157, Free: 105, Used: 52
-Internal unused: total: 35493 average: 1345.0 smallest: 10 largest: 3443
-External unused: total: 141293 average: 2717.0 smallest: 6 largest: 3962
+Total blocks: 169, Free: 117, Used: 52
+Internal unused: total: 192581 average: 3703.0 smallest: 1891 largest: 3999
+External unused: total: 189341 average: 1618.0 smallest: 10 largest: 3997
 2
-The current top of the heap is 0x7f70b3d32282.
+The current top of the heap is 0x7f3b19aaa282.
 Increased by 376 (0x178) Kbyte
-Total blocks: 160, Free: 108, Used: 52
-Internal unused: total: 32005 average: 1414.0 smallest: 9 largest: 3850
-External unused: total: 152737 average: 2937.0 smallest: 6 largest: 3972
+Total blocks: 172, Free: 120, Used: 52
+Internal unused: total: 192677 average: 3705.0 smallest: 929 largest: 4000
+External unused: total: 201235 average: 1676.0 smallest: 10 largest: 3998
 3
-The current top of the heap is 0x7f70b3d35188.
+The current top of the heap is 0x7f3b19aad188.
 Increased by 388 (0x184) Kbyte
-Total blocks: 163, Free: 113, Used: 50
-Internal unused: total: 37730 average: 1521.0 smallest: 10 largest: 3782
-External unused: total: 171883 average: 3437.0 smallest: 6 largest: 3974
+Total blocks: 175, Free: 125, Used: 50
+Internal unused: total: 183704 average: 3674.0 smallest: 1493 largest: 4000
+External unused: total: 222205 average: 1777.0 smallest: 10 largest: 3999
 4
-The current top of the heap is 0x7f70b3d38095.
+The current top of the heap is 0x7f3b19ab0095.
 Increased by 400 (0x190) Kbyte
-Total blocks: 164, Free: 104, Used: 60
-Internal unused: total: 29158 average: 1368.0 smallest: 10 largest: 2964
-External unused: total: 142345 average: 2372.0 smallest: 6 largest: 3972
+Total blocks: 176, Free: 116, Used: 60
+Internal unused: total: 220769 average: 3679.0 smallest: 1493 largest: 4000
+External unused: total: 189140 average: 1630.0 smallest: 10 largest: 3999
 5
-The current top of the heap is 0x7f70b3d39045.
+The current top of the heap is 0x7f3b19ab1045.
 Increased by 404 (0x194) Kbyte
-Total blocks: 164, Free: 116, Used: 48
-Internal unused: total: 29287 average: 1508.0 smallest: 8 largest: 3617
-External unused: total: 175013 average: 3646.0 smallest: 6 largest: 3972
+Total blocks: 176, Free: 128, Used: 48
+Internal unused: total: 182678 average: 3805.0 smallest: 1909 largest: 4000
+External unused: total: 227231 average: 1775.0 smallest: 10 largest: 4000
 6
-The current top of the heap is 0x7f70b3d39045.
+The current top of the heap is 0x7f3b19ab1045.
 Increased by 404 (0x194) Kbyte
-Total blocks: 165, Free: 113, Used: 52
-Internal unused: total: 39129 average: 1473.0 smallest: 9 largest: 3862
-External unused: total: 166536 average: 3202.0 smallest: 6 largest: 3986
+Total blocks: 177, Free: 125, Used: 52
+Internal unused: total: 193966 average: 3730.0 smallest: 1891 largest: 4000
+External unused: total: 219943 average: 1759.0 smallest: 10 largest: 3999
 7
-The current top of the heap is 0x7f70b3d39ff5.
+The current top of the heap is 0x7f3b19ab1ff5.
 Increased by 407 (0x197) Kbyte
-Total blocks: 166, Free: 106, Used: 60
-Internal unused: total: 30808 average: 1400.0 smallest: 8 largest: 3513
-External unused: total: 148419 average: 2473.0 smallest: 6 largest: 3991
+Total blocks: 178, Free: 118, Used: 60
+Internal unused: total: 224212 average: 3736.0 smallest: 1891 largest: 4000
+External unused: total: 193697 average: 1641.0 smallest: 10 largest: 4000
 8
-The current top of the heap is 0x7f70b3d3afa5.
+The current top of the heap is 0x7f3b19ab2fa5.
 Increased by 411 (0x19b) Kbyte
-Total blocks: 166, Free: 118, Used: 48
-Internal unused: total: 30011 average: 1583.0 smallest: 9 largest: 3066
-External unused: total: 186800 average: 3891.0 smallest: 6 largest: 3986
+Total blocks: 178, Free: 130, Used: 48
+Internal unused: total: 180248 average: 3755.0 smallest: 1909 largest: 4000
+External unused: total: 237661 average: 1828.0 smallest: 10 largest: 4000
 9
-The current top of the heap is 0x7f70b3d3afa5.
+The current top of the heap is 0x7f3b19ab2fa5.
 Increased by 411 (0x19b) Kbyte
-
  =========================================================================
